read keys by name from config file and not by number
git-svn-id: http://svn.code.sf.net/p/dangerdeep/code/trunk@875 68f6b752-3551-0410-8fee-d3b2b286690f

--- a/dangerdeep/src/SConscript
+++ b/dangerdeep/src/SConscript
@@ -18,6 +18,7 @@ dftdsources = Split("""subsim.cpp
 	game.cpp
 	gun_shell.cpp
 	highscorelist.cpp
+	keys.cpp
 	logbook.cpp
 	logbook_display.cpp
 	map_display.cpp
