removed obsolete data files
git-svn-id: http://svn.code.sf.net/p/dangerdeep/code/trunk@897 68f6b752-3551-0410-8fee-d3b2b286690f

--- a/dangerdeep/SConstruct
+++ b/dangerdeep/SConstruct
@@ -141,7 +141,8 @@ BuildDir(target_dir, source_base_dir, duplicate=0)
 
 allcvsfiles2 = ''
 for i in allcvsfiles:
-	allcvsfiles2 += i + ' '
+	if not(i.endswith('.xcf')):
+		allcvsfiles2 += '"' + i + '" '
 
 #env.Append(TARFLAGS = '-z ' + problematicfiless)
 #env.Append(TARSUFFIX = '.gz')
