first usage of tdc graphics, new keys and strings added
git-svn-id: http://svn.code.sf.net/p/dangerdeep/code/trunk@901 68f6b752-3551-0410-8fee-d3b2b286690f

--- a/dangerdeep/src/SConscript
+++ b/dangerdeep/src/SConscript
@@ -37,6 +37,7 @@ dftdsources = Split("""subsim.cpp
 	sub_damage_display.cpp
 	sub_gauges_display.cpp
 	sub_periscope_display.cpp
+	sub_tdc_display.cpp
 	sub_torpedo_display.cpp
 	sub_uzo_display.cpp
 	texts.cpp
