introduced general perlin noise generator. other code should use it too
git-svn-id: http://svn.code.sf.net/p/dangerdeep/code/trunk@917 68f6b752-3551-0410-8fee-d3b2b286690f

--- a/dangerdeep/src/SConscript
+++ b/dangerdeep/src/SConscript
@@ -25,6 +25,7 @@ dftdsources = Split("""subsim.cpp
 	network.cpp
 	parser.cpp
 	particle.cpp
+	perlinnoise.cpp
 	sea_object.cpp
 	sensors.cpp
 	ship.cpp
