shader improvements, better viewmodel
git-svn-id: http://svn.code.sf.net/p/dangerdeep/code/trunk@999 68f6b752-3551-0410-8fee-d3b2b286690f

--- a/dangerdeep/src/SConscript
+++ b/dangerdeep/src/SConscript
@@ -54,6 +54,7 @@ dftdsources = Split("""subsim.cpp
 dftdmediasources = Split("""
 	font.cpp
 	image.cpp
+	make_mesh.cpp
 	model.cpp
 	system.cpp
 	texture.cpp""")
