first bits of torpedo setup screen
git-svn-id: http://svn.code.sf.net/p/dangerdeep/code/trunk@1061 68f6b752-3551-0410-8fee-d3b2b286690f

--- a/dangerdeep/src/SConscript
+++ b/dangerdeep/src/SConscript
@@ -42,6 +42,7 @@ dftdsources = Split("""subsim.cpp
 	sub_tdc_display.cpp
 	sub_tdc_popup.cpp
 	sub_torpedo_display.cpp
+	sub_torpsetup_display.cpp
 	sub_uzo_display.cpp
 	texts.cpp
 	tokenizer.cpp
