added experimental sse code (disabled), fixed z-near for new conning tower, new conning tower model, new texture loading code, that handles SDL's rgb-mask values (disabled, because its slower and the old memcpy-code works with jpg and png images)
git-svn-id: http://svn.code.sf.net/p/dangerdeep/code/trunk@1077 68f6b752-3551-0410-8fee-d3b2b286690f

--- a/dangerdeep/SConstruct
+++ b/dangerdeep/SConstruct
@@ -65,7 +65,9 @@ else:
 	gllibs = ['GL', 'GLU']
 	sdllibs = ['SDL', 'SDL_image']
 	ccflags = '-Wall `sdl-config --cflags`'
-	if (debug >= 2):
+	if (debug >= 3):
+		ccflags += ' -g -pg -O3'	# profiling
+	elif (debug == 2):
 		ccflags += ' -g -O0'
 		env.Append(CPPDEFINES = ['DEBUG'])
 	elif (debug == 1):
