now compileable with sse on x86
git-svn-id: http://svn.code.sf.net/p/dangerdeep/code/trunk@1081 68f6b752-3551-0410-8fee-d3b2b286690f

--- a/dangerdeep/SConstruct
+++ b/dangerdeep/SConstruct
@@ -28,6 +28,7 @@ if ARGUMENTS.get('installdatadir', 0):
 debug = int(ARGUMENTS.get('debug', 0))
 devel = int(ARGUMENTS.get('devel', 0))
 cvedit = int(ARGUMENTS.get('cvedit', 0))
+usex86sse = int(ARGUMENTS.get('usex86sse', 0))
 
 ################ set environment
 
@@ -43,6 +44,9 @@ if sys.platform == 'win32':
 	sdllibs = ['SDL', 'SDL_image']
 	env.Append(CPPDEFINES = ['_REENTRANT'])
 	env.Append(CCFLAGS = '-Wall -O2') # for mingw!
+	if (usex86sse >= 0):
+		env.Append(CPPDEFINES = ['USE_SSE'])
+		print 'Using x86 SSE/MMX optimizations.'
 	datadir = './data'
 	build_dir = 'win32'
 elif sys.platform == 'darwin':
@@ -81,6 +85,10 @@ else:
 		ccflags += ' -g -O2' # debug symbols will be stripped by the linker for a debian package
 	if (cvedit == 1):
 		env.Append(CPPDEFINES = ['CVEDIT'])
+	if (usex86sse != 0):
+		env.Append(CPPDEFINES = ['USE_SSE'])
+		osspecificsrc += ['water_sse.cpp']
+		print 'Using x86 SSE/MMX optimizations.'
 	env.Append(CCFLAGS = ccflags)
 	datadir = installdatadir
 	build_dir = 'linux'
@@ -166,6 +174,7 @@ Help("""
 	Type 'scons -c' to clean up.
 	Type 'scons install' to install the game (as root).
 	Type 'scons tarball' to build a tarball of the source (works only with Linux).
+	Type 'scons debug=x' to build debug level x, or use 'scons usex86sse=1' for special optimizations.
 	""")
 
 ################ build
